--- a/app.json
+++ b/app.json
@@ -1,12 +1,7 @@
 {
-  "pages":[
+  "pages": [
+    "pages/home/home",
     "pages/index/index",
     "pages/logs/logs"
-  ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
-  }
+  ]
 }
