--- a/app.json
+++ b/app.json
@@ -2,6 +2,44 @@
   "pages": [
     "pages/home/home",
     "pages/index/index",
-    "pages/logs/logs"
-  ]
+    "pages/product/product",
+    "pages/theme/theme"    
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "ricefur",
+    "navigationBarTextStyle": "black"
+  },
+    "tabBar": {
+      "borderStyle": "white",
+      "color": "#989898",
+      "selectedColor":  "rgb(224,95,35)",
+      "list": [
+        {
+          "pagePath": "pages/home/home",
+          "text": "首页",
+          "iconPath": "/images/toolbar/home.png",
+          "selectedIconPath": "/images/toolbar/home@selected.png"
+        },
+        {
+          "pagePath": "pages/index/index",
+          "text": "分类",
+          "iconPath": "/images/toolbar/category.png",
+          "selectedIconPath": "/images/toolbar/category@selected.png"
+        },
+        {
+          "pagePath": "pages/index/index",
+          "text": "购物车",
+          "iconPath": "/images/toolbar/cart.png",
+          "selectedIconPath": "/images/toolbar/cart@selected.png"
+        },
+        {
+          "pagePath": "pages/index/index",
+          "text": "我的",
+          "iconPath": "/images/toolbar/my.png",
+          "selectedIconPath": "/images/toolbar/my@selected.png"
+        }
+      ]
+    }
 }
